--- a/README.org
+++ b/README.org
@@ -4,6 +4,8 @@
 
 [[https://github.com/imgix/luminous][Luminous]](「明るい」) を参考にしてglitter(「煌めき」)と名付けました。
 
+[[./images/example.gig]]
+
 * インストール
 
 TBD
