--- a/README.org
+++ b/README.org
@@ -4,7 +4,7 @@
 
 [[https://github.com/imgix/luminous][Luminous]](「明るい」) を参考にしてglitter(「煌めき」)と名付けました。
 
-[[./images/example.gig]]
+[[./images/example.gif]]
 
 * インストール
 
